# notebud

./: .dockerignore  .env  .env.cloud  .env.example  .env.local  .env.production  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  boost.json  composer.json  docker-compose.yml  nginx.conf  package-lock.json  render.yaml  switch.sh
.github/: FUNDING.yml
.github/workflows/: aiven-keep-alive.yml  deploy.yml  ping-aiven-db.yml
app/Concerns/: PasswordValidationRules.php  ProfileValidationRules.php
app/Livewire/: NotificationBell.php
app/Models/: File.php  Note.php  RecoveryCode.php  Share.php  User.php
app/Notifications/: AdminNotification.php  ShareRequestNotification.php  ShareResponseNotification.php
app/Policies/: FilePolicy.php  NotePolicy.php  SharePolicy.php
app/Providers/: AppServiceProvider.php  FortifyServiceProvider.php
app/Rules/: Recaptcha.php  Turnstile.php
app/Support/: RecoveryCodes.php  StorageQuota.php
bootstrap/: app.php
config/: app.php  cache.php  filesystems.php  fortify.php  session.php
database/factories/: FileFactory.php  NoteFactory.php  RecoveryCodeFactory.php  ShareFactory.php  UserFactory.php
database/migrations/: 2025_08_15_000002_create_files_table.php  2025_08_15_000003_create_shares_table.php  2026_03_15_000001_add_storage_quota_to_users_table.php  2026_03_31_000001_add_performance_indexes.php  (+2 more)
docker/: ca.pem  entrypoint.sh  nginx.conf
public/: robots.txt
routes/: settings.php  web.php
src/websocket/notebud_websocket/: Cargo.toml
src/websocket/notebud_websocket/src/: auth.rs  database.rs  handlers.rs  main.rs  types.rs
(+147 files in other folders)
