[package]
name = "notebud_websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "9.2"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
