[package]
name = "notebud_websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
mongodb = "2.7"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
urlencoding = "2.1"
sha1 = "0.10"
base64 = "0.21"
