[package]
name = "notebud_websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
env_logger = "0.10"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.11"
jsonwebtoken = "9.0"
log = "0.4"
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
urlencoding = "2.1"
uuid = { version = "1.6", features = ["v4"] }
